# kafka-rebalancer

./: Cargo.toml  README.md
examples/: example.rs
src/: actions.rs  constraints.rs  goals.rs  lib.rs  model.rs  optimizer.rs
src/goals/: disk_capacity.rs  leader_distribution.rs  mod.rs  preferred_leader.rs  rack_aware.rs  replica_capacity.rs  replica_distribution.rs
src/models/: broker.rs  cluster.rs  mod.rs  replica.rs  resources.rs  topic.rs
