[package]
name = "kafka-rebalancer"
version = "0.1.0"
edition = "2024"
authors = ["Nick Franken <shnick@gmail.com>"]
description = "A Rust library for Kafka partition rebalancing"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Optional: For async support
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
async = ["tokio"]

[lib]
name = "kafka_rebalancer"
path = "src/lib.rs"

[[example]]
name = "example"
path = "examples/example.rs"
